--- a/不同容器间通信.md
+++ b/不同容器间通信.md
@@ -8,7 +8,7 @@
 
 可以在宿主主机下执行ifconfig命令查看：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/7.jpg)
 
 二. **不同宿主主机下的容器如何通信**
 
@@ -16,7 +16,7 @@
 
 **weave工作原理：**
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/8.jpg)
 
 先创建由多个peer组成的对等网络，每个peer是一个虚拟路由器容器，即weave容器，它们分布在不同的宿主主机上。这个对等网络的每个peer间会维持一个TCP链接，用于互相交互拓扑信息，它们也会建立udp链接用于容器间通信。一个weave路由器通过网桥技术链接到本宿主机上的其他容器。当处在不同主机上的两个容器想要相互通信，一台宿主机上的weave路由器通过网桥截获数据包，使用udp协议封装后转发到另一台主机上的weave路由器。每个路由器会刷新对等网络的拓扑信息，可以称作容器的MAC地址（像交换机的mac地址学习一样），因此它可以知道数据包的下一跳是哪个容器的。weave能让两个位于不同宿主主机上的容器相互通信，只要这两台宿主机在weave拓扑结构内连接到同一个weave路由器。
 
@@ -38,11 +38,11 @@ sudo weave launch
 
 第一次运行这个命令的时候由于本机没有weave镜像所以会先下载，下载后会自动运行这个镜像，会看到运行了如下几个容器：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/9.jpg)
 
 查看路由器的状态：weave status
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/10.jpg)
 
 第二步：主机B上启动weave路由器(与第一步稍有不同)
 
@@ -50,7 +50,7 @@ sudo weave launch &lt;first-host-IP-address&gt;
 
 要为这台weave路由器指定第一台weave主机的ip地址，查看路由状态会看到两个peer成员,分别是自己和第一台主机：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/11.jpg)
 
 当开启更多路由器时，这个peer成员列表会变得更长，每开一个路由器都要指定前一个路由器的IP地址
 
@@ -76,7 +76,7 @@ weave attach 10.0.0.3/24 containerID
 
 容器内部使用ifconfig查看：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/12.jpg)
 
 ------------------------------------------------------------------------------------------------------
 
