--- a/镜像.md
+++ b/镜像.md
@@ -60,7 +60,7 @@ centos6-bash        latest              5f805f979259        5 minutes ago       
 
 7. 退出exit，然后查看所有容器docker ps -a，可以看到
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/13.jpg)
 
 8. 启动刚才创建的容器
 
