--- a/外界如何访问容器内的服务.md
+++ b/外界如何访问容器内的服务.md
@@ -1,1 +1,39 @@
+以mysql为例：
 
+1. 首先创建Dockerfile：
+
+ ![image]()
+
+2. 生成镜像：执行 docker build -t mysql-p2p:1.0  .
+
+3. 创建mysql容器：
+
+docker run -t -i --name mysql5 --privileged=true  -v /home/yangliyun:/mnt/database -P  ImagerID
+
+说明：
+
+-t：表示容器启动后会进入其命令行
+
+-i：表示以&quot;交互模式&quot;运行容器
+
+--name：给容器取个名字
+
+-v ： 表示需要将本地哪个目录挂载到容器中，格式：-v &lt;宿主机目录&gt;:&lt;容器目录&gt;
+
+--privileged=true：如果使用了-v,那访问挂载到容器中的目录时默认是permission deny的，这样设置就允许访问
+
+-P(注意是大P)：将dockerfile中EXPOSE的端口映射到宿主主机的端口上（随机）
+
+使用docker ps可以查询具体映射的是哪个端口，如：
+
+ ![image]()
+
+此时可以使用navicat客户端来连接mysql，端口为32772
+
+4. 进入容器后执行:
+
+mysql
+
+source \*\*\*.sql
+
+将服务器的数据库文件导进去
