--- a/外界如何访问容器内的服务.md
+++ b/外界如何访问容器内的服务.md
@@ -2,7 +2,7 @@
 
 1. 首先创建Dockerfile：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/14.jpg)
 
 2. 生成镜像：执行 docker build -t mysql-p2p:1.0  .
 
@@ -26,7 +26,7 @@ docker run -t -i --name mysql5 --privileged=true  -v /home/yangliyun:/mnt/databa
 
 使用docker ps可以查询具体映射的是哪个端口，如：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/15.jpg)
 
 此时可以使用navicat客户端来连接mysql，端口为32772
 
