--- a/问题记录.md
+++ b/问题记录.md
@@ -1,1 +1,65 @@
+1.报错：Get http:///var/run/docker.sock/v1.19/images/json: dial unix /var/run/docker.sock: no such file or directory. Are you trying to connect to a TLS-enabled daemon without TLS?
 
+. 解决办法：service docker start
+
+2. 进入容器后不显示当前工作目录，只显示：#bash-4.1:
+
+解决办法：这是个为终端，文件不是特别全
+
+wget [http://howie.wang/.bashrc](http://howie.wang/.bashrc)
+
+wget [http://howie.wang/.bash\_profile](http://howie.wang/.bash_profile)
+
+source .bsahrc
+
+source .bash\_profile
+
+但通过ps或top命令
+
+我们却只能看到一两个进程，因为容器的核心是所执行的应用程序，所需要的资源都是应用程序运行所必需的，除此之外，并没有其它的资源，可见Docker对资源的利用率极高，很轻量级
+
+3. 在使用toolbox时报错：
+
+ ![image]()
+
+解决办法：执行：docker-machine restart default
+
+4. docker pull下来的镜像放到哪里了？
+
+答：
+
+ ![image]()
+
+5. 使用docker时报错：
+
+dial unix /var/run/docker.sock: no such file or directory. Are you trying to connect to a TLS-enabled daemon without TLS?
+
+原因及解决办法：docker服务未启动，执行systemctl start  docker.service
+
+6. 当使用docker image查看本地镜像的时候有时会发现repository:tag就会变成&lt;none&gt;:&lt;none&gt;，为什么？
+
+答：这是因为反复commit了一个容器，且commit时后面的repository:tag没有变，此时上次的提交的那份镜像就会变为&lt;none&gt;:&lt;none&gt;。commit container只会pause住容器，这是为了保证容器文件系统的一致性，但不会stop。如果你要对这个容器继续做其他修改的话，最好先关闭容器，使用新的镜像生成容器，再修改再提交
+
+7. 在centos7上启动centos6镜像容器，查看内核版本为什么是centos7的内核？但版本是centos6？
+
+首先需要区分 **Linux内核** 与 **Linux发行版**
+
+1. **Linux内核** 是Linux操作系统的核心, 负责硬件管理, 比如管理内存、管理磁盘（文件系统）、管理CPU(进程)等等...
+2. **Linux发行版** 是在 **Linux内核** 的基础上添加了一些工具软件,比如图形界面、函数库、软件包管理系统等等...
+
+Docker容器技术是基于 **Linux内核** 实现的， 它主要用到了两个内核模块:
+
+1. **Namespace** ： 用于容器的隔离， 例如PID Namespace使得容器中的进程无法感知宿主机以及其他容器中的进程。
+2. **Cgroups** : 用于容器的资源控制， 比如限制容器所使用的内存大小或者CPU个数。
+
+所有的容器都是一系列文件，使用的都是宿主主机的内核
+
+8. 使用docker run build Jenkins：1.0 . 报错：
+
+invalid value &quot;Jenkins-jmenter-ant:1.0&quot; for flag -t: Error parsing reference: &quot;Jenkins-jmenter-ant:1.0&quot; is not a valid repository/tag
+
+解决办法：改成小写的jenkins就好了
+
+9. 使用docker push时报错：Head https://registry-1.docker.io/v2/yangliyun2016/telegraf-influxdb-grafana/blobs/sha256:7a399f34830a0566d12195fb44fe45f4f310a09c0c8fb5075f645efa20976b43: dial tcp: lookup registry-1.docker.io on 192.168.0.251:53: no such host
+
+解决办法：docker login后再push 或者是先docker logout 之后再docker login,然后docker push
