--- a/问题记录.md
+++ b/问题记录.md
@@ -20,7 +20,7 @@ source .bash\_profile
 
 3. 在使用toolbox时报错：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/16.jpg)
 
 解决办法：执行：docker-machine restart default
 
@@ -28,7 +28,7 @@ source .bash\_profile
 
 答：
 
- ![image]()
+ ![image](https://github.com/p2ptest/docker-p2p-servertest/blob/master/images/17.jpg)
 
 5. 使用docker时报错：
 
